--- a/src/app/pages/ip/ip-info/ip-info.component.scss
+++ b/src/app/pages/ip/ip-info/ip-info.component.scss
@@ -44,7 +44,6 @@
     min-height: auto;
     border-right: none;
     border-top: 1px solid rgba(255, 255, 255, 0.08);
-    padding: 1rem 1rem 4rem;
-    margin-bottom: 2rem;
+    padding: 1rem 1rem 4.5rem;
   }
 }
